--- a/index.html
+++ b/index.html
@@ -234,7 +234,23 @@
                 <div class="gallery-grid">
                     <!-- Frame 1 -->
                     <div class="gallery-item">
-                        <img src="https://placehold.co/600x400/e0f2f1/0d9488?text=Aviator+Style" alt="Classic Aviator Frames">
+                        <img src="/assets/optical-gallery-3.jpeg" alt="Classic Aviator Frames">
+                        <div class="gallery-caption">
+                            <strong>The 'Pilot'</strong>
+                            <span>Classic Metal Aviator Frames</span>
+                        </div>
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="/assets/special-googles.jpeg" alt="Classic Aviator Frames">
+                        <div class="gallery-caption">
+                            <strong>The 'Pilot'</strong>
+                            <span>Classic Metal Aviator Frames</span>
+                        </div>
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="/assets/optical-gallery-1.jpeg" alt="Classic Aviator Frames">
                         <div class="gallery-caption">
                             <strong>The 'Pilot'</strong>
                             <span>Classic Metal Aviator Frames</span>
@@ -243,7 +259,7 @@
 
                     <!-- Frame 2 -->
                     <div class="gallery-item">
-                        <img src="https://placehold.co/600x400/bfdbfe/1d4ed8?text=Bold+Acetate" alt="Bold Black Acetate Frames">
+                        <img src="/assets/optical-gallery-2.jpeg" alt="Bold Black Acetate Frames">
                         <div class="gallery-caption">
                             <strong>The 'Director'</strong>
                             <span>Bold Acetate in Matte Black</span>
@@ -252,7 +268,23 @@
 
                     <!-- Frame 3 -->
                     <div class="gallery-item">
-                        <img src="https://placehold.co/600x400/d1d5db/374151?text=Round+Tortoise" alt="Round Tortoise Shell Frames">
+                        <img src="/assets/optical-gallery-6.jpeg" alt="Round Tortoise Shell Frames">
+                        <div class="gallery-caption">
+                            <strong>The 'Librarian'</strong>
+                            <span>Timeless Round Tortoiseshell</span>
+                        </div>
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="/assets/special-glasses.jpeg" alt="Round Tortoise Shell Frames">
+                        <div class="gallery-caption">
+                            <strong>The 'Librarian'</strong>
+                            <span>Timeless Round Tortoiseshell</span>
+                        </div>
+                    </div>
+
+                    <div class="gallery-item">
+                        <img src="/assets/special-googles-2.jpeg" alt="Round Tortoise Shell Frames">
                         <div class="gallery-caption">
                             <strong>The 'Librarian'</strong>
                             <span>Timeless Round Tortoiseshell</span>
@@ -261,7 +293,7 @@
 
                     <!-- Frame 4 -->
                     <div class="gallery-item">
-                        <img src="https://placehold.co/600x400/fecaca/dc2626?text=Kids+Collection" alt="Durable Kids Glasses">
+                        <img src="/assets/optical gallery-4.jpeg" alt="Durable Kids Glasses">
                         <div class="gallery-caption">
                             <strong>The 'Explorer'</strong>
                             <span>Durable, Flexible Kids Eyewear</span>
@@ -273,12 +305,12 @@
         
     </main>
 
-     <!-- Footer -->
+      <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p class="ready">Ready for clear vision? <a href="/contactUs.html" class="schedule" >Schedule Your Exam</a></p>
+            <p class="ready">Ready for clear vision? <a href="/contactUs.html" class="cta-button book" >Book Appointment</a></p>
             <p class="wills-desc">&copy; 2025 Will's Eye Clinic. All rights reserved.</p>
-            <p class="wills-address">New Haven, Enugu State | <a href="#">Privacy Policy</a> | <a href="/contactUs.html">Contact Us</a></p>
+            <p class="wills-address">📍New Haven, Enugu State | <a href="#">Privacy Policy</a> | <a href="/contactUs.html">Contact Us</a> +234 8552646574</p>
         </div>
     </footer>
 </body>
