few pic additions

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Will's-Book</title>
+    <title>Will's-Book Exam</title>
     <link rel="stylesheet" href="/styles/contactus.css">
     <link rel="shortcut icon" href="/assets/wills-logo.jpg" type="image/x-icon">
 </head>
@@ -15,7 +15,7 @@
             <nav class="nav-links">
                 <a href="/">About Us</a>
                 <a href="/">Services</a>
-                <a href="#" class="cta-button book">Book Appointment</a>
+                <a href="#" class="cta-button book">Book Exam</a>
             </nav>
         </div>
     </header>
@@ -77,7 +77,7 @@
 <section class="address">
     <div class="contact-address">
         <h3>WILLS EYE CLINIC</h3>
-        <p>📍 Address: </p>
+        <p>📍 Address: New Haven, Enugu State</p>
         <p>📧 Email: <a href="mailto :" class="mail-us">Send direct Email</a></p>
         <p>🕒Work Hours:</p>
         <ul>
@@ -92,9 +92,9 @@
  <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
-            <p class="ready">Ready for clear vision? <a href="/contactus" class="cta-button book btn" >Book Appointment</a></p>
+            <p class="ready">Ready for clear vision? <a href="/contactus" class="cta-button book btn" >Book Exam</a></p>
             <p class="wills-desc">&copy; 2025 Will's Eye Clinic. All rights reserved.</p>
-            <p class="wills-address">📍New Haven, Enugu State | <a href="/contactus">Contact Us</a></p>
+            <p class="wills-address">📍New Haven, Enugu State |<a href="/contactus">Contact Us</a></p>
         </div>
     </footer>
 </body>
