--- a/public/contactus.html
+++ b/public/contactus.html
@@ -92,9 +92,9 @@
  <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
-            <p class="ready">Ready for clear vision? <a href="/contactus" class="cta-button book btn" >Book Exam</a></p>
+            <p class="ready">Ready for clear vision? <a href="#" class="cta-button book btn" >Book Exam</a></p>
             <p class="wills-desc">&copy; 2025 Will's Eye Clinic. All rights reserved.</p>
-            <p class="wills-address">📍New Haven, Enugu State |<a href="/contactus">Contact Us</a></p>
+            <p class="wills-address">📍New Haven, Enugu State |<a href="#">Contact Us</a></p>
         </div>
     </footer>
 </body>
