included javascript to get new year

--- a/public/contactus.html
+++ b/public/contactus.html
@@ -78,7 +78,7 @@
     <div class="contact-address">
         <h3>WILLS EYE CLINIC</h3>
         <p>📍 Address: New Haven, Enugu State</p>
-        <p>📧 Email: <a href="mailto :" class="mail-us">Send direct Email</a></p>
+        <p>📧 Email: <a href="mailto:" class="mail-us">Send direct Email</a></p>
         <p>🕒Work Hours:</p>
         <ul>
             <li>Monday – Friday: 8:00 am – 6:00 pm WAT</li>
@@ -93,9 +93,12 @@
     <footer class="footer">
         <div class="footer-container">
             <p class="ready">Ready for clear vision? <a href="#" class="cta-button book btn" >Book Exam</a></p>
-            <p class="wills-desc">&copy; 2025 Will's Eye Clinic. All rights reserved.</p>
+            <p class="wills-desc">&copy; <span id="year"></span> Will's Eye Clinic. All rights reserved.</p>
             <p class="wills-address">📍New Haven, Enugu State |<a href="#">Contact Us</a></p>
         </div>
     </footer>
+<script>
+  document.getElementById("year").textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
